# OSKAR

./: .gitignore  AST.fs  Cargo.toml  Generated.fs  Makefile  Makefile.toml  Pipfile  Program.fs  README.md  actions.py  build.rs  compiler.py  grammar.js  grammar.peg  grammar.pegjs  grammar.py  grammar2020.pegjs  node_types.py  oskar.fsproj  oskar.py  package-lock.json  package.json  parser.py  test.py
.ionide/: symbolCache.db
cases/: test_case_01.osk  test_case_02.osk  test_case_03.osk  test_case_04.1.osk  test_case_04.2.osk  test_case_04.3.osk  test_case_04.5.osk  test_case_04.6.osk  test_case_04.6a.osk  test_case_04.osk  test_case_04a.osk  test_case_04b.osk  test_case_06.a.osk  test_case_06.osk  test_case_07.5 for pix.osk  test_case_07.5.osk  test_case_07.5a.osk  test_case_07.5b.osk  test_case_07.6.osk  test_case_07.osk  test_case_08.osk  test_case_09.osk  test_case_10.osk
examples/: csg1.osk  csg2.osk  csg3.osk  csg4.osk  functions.osk  functions1.osk  functions2.osk  functions3.osk  picture_as_func1.osk  picture_as_func2.osk  picture_as_func3.osk  picture_lists1.osk  picture_lists2.osk  pictures1.osk  pictures2.osk  pictures3.osk  pictures4.osk  start_with_comment.osk  variables2.osk
oskar_to_python/: oskar_compiler.hs
python_to_openscad/: pythonGenerator.py
rosetta/: Funs_Lib.py  curve_from_points.py  curve_from_points02.py  curve_from_points03.py  file_monitor.py  houdini_calls.py  main.py  test_case_01.py  test_case_02.py  test_case_03.py  test_case_04.py  test_case_05.py  test_case_06.py  test_case_07.py  test_case_08.py
src/: ast.rs  codegen.rs  (+6 more)
(+1 files in other folders)
