[package]
name = "oskar"
version = "4.0.0"
authors = ["Ramsey Nasser <ram@nas.sr>"]
edition = "2018"

[dev-dependencies]
test-case = "*"

[dependencies]
pest = "2.6.0"
pest_derive = "2.6.0"
clap = "3.0.0-beta.2"
regex = "*"
normalize-line-endings = "*"
lazy_static = "1.4.0"

[dependencies.python-parser]
version = "0.2.0"
default-features = false

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize", "generate-import-lib"]
